After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680484 - gstreamer-1.0: Endless loop/crash in when running gupnp-dlna-info with -v
gstreamer-1.0: Endless loop/crash in when running gupnp-dlna-info with -v
Status: RESOLVED FIXED
Product: gupnp-dlna
Classification: Other
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-23 20:05 UTC by Jens Georg
Modified: 2019-02-22 06:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the -v crash (1.71 KB, patch)
2012-07-26 05:41 UTC, Riko Yamada
needs-work Details | Review
Fix the -v crash (1.08 KB, patch)
2012-07-28 08:12 UTC, Riko Yamada
committed Details | Review

Description Jens Georg 2012-07-23 20:05:59 UTC
Needs checking if that's a port problem or a gst-1.0 issue:

Topology:
  container: video/quicktime, variant=(string)iso
    video: video/x-h264, stream-format=(string)avc, alignment=(string)au, level=(string)3, profile=(string)main, codec_data=(buffer)014d401eff010015274d401ea9181405ff2e00d418041adb0ad7bdf01001000428de09c8, width=(int)640, height=(int)360, framerate=(fraction)30000/1001, pixel-aspect-ratio=(fraction)1/1

Program received signal SIGSEGV, Segmentation fault.
0x00007ffff76a7d8c in g_type_check_value (value=0x6c8948f0245c8950) at gtype.c:4138
4138	  return value && type_check_is_value_type_U (value->g_type);
(gdb) bt
  • #0 g_type_check_value
    at gtype.c line 4138
  • #1 gst_value_serialize
    at gstvalue.c line 4652
  • #2 priv_gst_structure_append_to_gstring
    at gststructure.c line 1784
  • #3 gst_structure_to_string
    at gststructure.c line 1834
  • #4 gst_stream_video_information_to_string
    at gupnp-dlna-info.c line 188
  • #5 print_stream_info
    at gupnp-dlna-info.c line 224
  • #6 print_topology
    at gupnp-dlna-info.c line 241
  • #7 print_topology
    at gupnp-dlna-info.c line 256
  • #8 print_gst_info
    at gupnp-dlna-info.c line 304
  • #9 print_dlna_info
    at gupnp-dlna-info.c line 325
  • #10 process_file
    at gupnp-dlna-info.c line 409
  • #11 main
    at gupnp-dlna-info.c line 484

Comment 1 Riko Yamada 2012-07-25 06:45:21 UTC
Hi Jens,

I wanted to reproduce the bug but I wasn't able to compile the gupnp-dlna with GStreamer-1.0. I have installed the dev packages of GStreamer-1.0 according to this link https://wiki.ubuntu.com/Novacut/GStreamer1.0. I also checked out the git branch gstreamer-0.11. I modified the code a little bit according to this doc
http://cgit.freedesktop.org/gstreamer/gstreamer/tree/docs/random/porting-to-0.11.txt

I got the error message saying `gst_caps_undef' and `gst_caps_copy' are undefined references during the linking phase.

So, what branch did you use, master or gstreamer-0.11? Thanks.
Comment 2 Jens Georg 2012-07-25 07:10:32 UTC
The gstreamer-0.11 branch + some fixes on top that are now pushed to the gstreamer-1.0 branch.
Comment 3 Jens Georg 2012-07-25 07:10:33 UTC
The gstreamer-0.11 branch + some fixes on top that are now pushed to the gstreamer-1.0 branch.
Comment 4 Riko Yamada 2012-07-26 05:41:37 UTC
Created attachment 219670 [details] [review]
Fix the -v crash

I think I have fixed the -v crash problem. See the attached patch. The program runs OK in my machine.
Comment 5 Jens Georg 2012-07-26 06:17:28 UTC
Review of attachment 219670 [details] [review]:

::: tests/dlna-encoding.c
@@ -105,3 @@
   g_print (" Output URI : %s\n", outputuri);
 
-  sink = gst_element_make_from_uri (GST_URI_SINK, outputuri, "sink", NULL);

Why do you drop the error parameter?
Comment 6 Riko Yamada 2012-07-26 14:42:15 UTC
I don't know which version of gstreamer-1.0 (or gstreamer-0.11.xx) you use. I installed the dev package of gst-1.0 by running 'sudo apt-add-repository ppa:gstreamer-developers/ppa' according to https://wiki.ubuntu.com/Novacut/GStreamer1.0. In my machine, the gst_element_make_from_uri () only has the first 3 arguments. You can see the declaration at http://cgit.freedesktop.org/gstreamer/gstreamer/tree/gst/gsturi.h?h=0.11
Comment 7 Jens Georg 2012-07-27 09:19:20 UTC
That ppa seems to be slighly outdated, master is now 0.11/1.0 where gst_element_make_from_uri has that error parameter
Comment 8 Riko Yamada 2012-07-28 08:12:53 UTC
Created attachment 219763 [details] [review]
Fix the -v crash

I rebuilt gstreamer-1.0 from git master branch and re-created the patch.
Comment 9 Javier Jardón (IRC: jjardon) 2012-11-21 04:17:45 UTC
Comment on attachment 219763 [details] [review]
Fix the -v crash

commit 	3d6f2a1f73c4d912b0270f2f6279512208014c00