Fix crash in gupnp-dlna-info

GstTagList is now an opaque mini object instead of being typedefed to a
GstStructure. Therefore cast from GstTagList to GstStructure will cause
crashes. Simply using gst_tag_list_to_string () will be fine.

https://bugzilla.gnome.org/show_bug.cgi?id=680484